Update Post “2022-09-09-близу-шебета”

--- a/src/content/posts/2022-09-09-близу-шебета.md
+++ b/src/content/posts/2022-09-09-близу-шебета.md
@@ -1,7 +1,7 @@
 ---
 template: blog-post
 title: Близу Шебета
-slug: Близу Шебета
+slug: /Близу Шебета
 date: 2022-09-09 20:02
 description: Ливада испод Шебета у јесен
 featuredImage: /assets/priroda-u-jesen.jpg
