Update Post “2022-09-09-слике-из-шебета”

--- a/src/content/posts/2022-09-09-слике-из-шебета.md
+++ b/src/content/posts/2022-09-09-слике-из-шебета.md
@@ -1,7 +1,7 @@
 ---
 template: blog-post
 title: Слике из Шебета
-slug: фотографије
+slug: /фотографије
 date: 2022-09-09 19:50
 description: слике Шебета
 featuredImage: /assets/šebet-moj.jpg
