Update Post “2022-09-09-пошаљи-своју-фотографију”

--- a/src/content/posts/2022-09-09-пошаљи-своју-фотографију.md
+++ b/src/content/posts/2022-09-09-пошаљи-своју-фотографију.md
@@ -4,5 +4,6 @@ title: Пошаљи своју фотографију
 slug: /Пошаљи своју фотографију
 date: 2022-09-09 21:08
 description: "Пошаљи своју фотографију "
+featuredImage: /assets/https-__s3-us-west-2.avif
 ---
 Ако желиш да се твоје фотографије нађу на сајту пошаљи их преко овог [линка-странице](https://shebet-selo.netlify.app/contact/file-upload/) !
