Update Post “2022-09-09-пошаљи-своју-фотографију”

--- a/src/content/posts/2022-09-09-пошаљи-своју-фотографију.md
+++ b/src/content/posts/2022-09-09-пошаљи-своју-фотографију.md
@@ -4,6 +4,6 @@ title: Пошаљи своју фотографију
 slug: /Пошаљи своју фотографију
 date: 2022-09-09 21:08
 description: "Пошаљи своју фотографију "
-featuredImage: /assets/pismo.png
+featuredImage: ""
 ---
 Ако желиш да се твоје фотографије или неки прилог нађу на сајту пошаљи их преко овог [линка-странице](https://shebet-selo.netlify.app/contact/file-upload/) ! Ваше фотографије и остало ће стићи на е-адресу [kojeimanovoposebet@gmail.com](kojeimanovoposebet@gmail.com)
