Update Post “2022-09-09-чекамо-асфалт”

--- a/src/content/posts/2022-09-09-чекамо-асфалт.md
+++ b/src/content/posts/2022-09-09-чекамо-асфалт.md
@@ -1,11 +1,19 @@
 ---
 template: blog-post
 title: Чекамо асфалт
-slug: "/пред асфалтирање "
+slug: "/пред-асфалтирање "
 date: 2022-09-09 20:52
 description: Ризла је за сада а асфалт чекамо!
 featuredImage: /assets/rizla.jpg
 ---
+![1](/assets/1.jpg "1")
+
+![2](/assets/2.jpg "2")
+
+![3](/assets/3.jpg "3")
+
+![4](/assets/4.jpg "4")
+
+![5](/assets/5.jpg "5")
 
 Ризла је за сада а асфалт чекамо!
-
