--- a/src/content/posts/2022-09-09-чекамо-асфалт.md
+++ b/src/content/posts/2022-09-09-чекамо-асфалт.md
@@ -1,10 +1,10 @@
 ---
 template: blog-post
 title: Чекамо асфалт
-slug: "/пред-асфалтирање "
+slug: "/пред_асфалтирање "
 date: 2022-09-09 20:52
 description: Ризла је за сада а асфалт чекамо!
-featuredImage: /assets/rizla.jpg
+featuredImage: ""
 ---
 ![1](/assets/1.jpg "1")
 
