Update Post “2022-09-26-qr-kod”

--- a/src/content/posts/2022-09-26-qr-kod.md
+++ b/src/content/posts/2022-09-26-qr-kod.md
@@ -4,6 +4,6 @@ title: QR-KOD
 slug: /QR-KOD
 date: 2022-09-26 17:43
 description: QR-KOD
-featuredImage: /assets/qr-svadba2.png
+featuredImage: /assets/qr-svadba-.png
 ---
 ŠIRI DALJE VESELJE!
