Update Post “2022-09-26-и-срећко-је-на-свадби”

--- a/src/content/posts/2022-09-26-и-срећко-је-на-свадби.md
+++ b/src/content/posts/2022-09-26-и-срећко-је-на-свадби.md
@@ -6,4 +6,6 @@ date: 2022-09-26 21:43
 description: Мали Срећко је на свадби Невене и Милоша!
 featuredImage: /assets/img20220612163640.jpg
 ---
+![срећко](/assets/срећко.jpg "срећко тренира")
+
 Мали Срећко је на свадби Невене и Милоша!
